[package]
name = "awair-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
structopt = "0.3"
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] } 
tokio = { version = "1.12.0", features = ["full"] }

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"
